--- a/index.html
+++ b/index.html
@@ -102,11 +102,13 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
     <div class="header area" id="header">
         <div class="container">
             <p class="p-1">
-                International Conference on global health challenges & innovation
+<!--                 International Conference on global health challenges & innovation -->
+             International Conference Global Mental Health And Public Health Challenges And Innovation
+(GMHPHCI 22)
             </p>
             <section class="mt-2">
                 <img src="logo.png" alt="logo">
-                <h1 class="ore">GHCI' 2022</h1>
+                <h1 class="ore">GMHPHCI' 2022</h1>
             </section>
             <p class="p-2 mt-2">
                 <!-- (Via Online/Offline mode) <br> -->
@@ -209,7 +211,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
                     <article>
                         <h1>Topic of Interest</h1>
                         <hr class="bg-ore">
-                        <p>GHCI’2022 aims to examine some recent developments in the interaction between emerging
+                        <p>GMHPHCI’2022 aims to examine some recent developments in the interaction between emerging
                             technologies addressing mental
                             health issues and innovations. The conference will focus on finding relevant applications of
                             different tools and techniques
@@ -383,7 +385,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
     <footer>
         <div class="container">
             <section class="sec_1">
-                <h1>ghci<small class="ore">'</small> 2022</h1>
+                <h1>GMHPHCI<small class="ore">'</small> 2022</h1>
                 <small class="mt-2">
                     Indian Institute of Information Technology Ranchi, Jharkhand, India
                     in collaborations with
@@ -461,9 +463,9 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
     <div class="extra-footer">
         <div class="container">
             <p>
-                &copy; GHCI All Rights Reserved
+                &copy; GMHPHCI All Rights Reserved
             </p>
-            <small>Developed By <a href="" class="ore">Web Team, GHCI</a></small>
+            <small>Developed By <a href="" class="ore">Web Team, GMHPHCI</a></small>
 
             <button id="backtotop"><a href="#stop" class="text-light fa fa-chevron-up"></a></button>
         </div>
