--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
             <div class="logo" id="logo">
                 <a href=""><img src="logo.png" alt="logo"></a>
                 <a href="">
-                    <h1>ghci<small class="ore">'</small> 2022</h1>
+                    <h1>gmhphci<small class="ore">'</small> 2022</h1>
                 </a>
             </div>
 
