--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
             <p class="p-1">
 <!--                 International Conference on global health challenges & innovation -->
              International Conference On Global Mental Health And Public Health Challenges And Innovation
+                (GMHPHCI'22)
             </p>
             <section class="mt-2">
                 <img src="logo.png" alt="logo">
