--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
         <div class="container">
             <p class="p-1">
 <!--                 International Conference on global health challenges & innovation -->
-             International Conference On Global Mental Health And Public Health Challenges And Innovation
+             International Conference On Global Mental Health And Public Health Challenges And Innovation<br>
                 (GMHPHCI'22)
             </p>
             <section class="mt-2">
