--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/solid.min.css -->
                     <p>
                         <b>Email : </b> <a href="">&nbsp;ghci2022@iiitr.ac.in</a>
                     </p>
-
+                        <header class="ore"><b>Usefull Links</b></header>
                     <ul class="">
                         <li><a href="" class="fa fa-twitter"></a></li>
                         <i class=""></i>
